k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-next
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: portfolio-next
          image: ghcr.io/cyrildesch/portfolio-next:production
