k8s/overlays/production/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-next
spec:
  hostnames:
  - "cyrildeschamps.fr"
